Task T020 finished
- Exposed Endpoints
- Tested